// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`front renderers link text renderer renders link text 1`] = `
<Text>
  Some Text
</Text>
`;

exports[`front renderers paragraph renderer renders paragraph 1`] = `
<Text
  style={
    Array [
      Object {
        "fontSize": 14,
      },
    ]
  }
>
  Some Text
</Text>
`;

exports[`front renderers paragraph renderer renders paragraph with new line at end 1`] = `
<Text
  style={
    Array [
      false,
    ]
  }
>
  　
  Some Text
  

</Text>
`;

exports[`front renderers paragraph renderer renders paragraph with tab 1`] = `
<Text
  style={
    Array [
      Object {
        "fontSize": 14,
      },
    ]
  }
>
  　
  Some Text
</Text>
`;
